# DesignToCode

./: pyproject.toml
src/DesignToCode/client/: metadata.py  mistral_client.py  prompt_generator.py
src/DesignToCode/html/: html_response_from_image.html  openai.html  second.html
src/DesignToCode/input/json/: context.json  context_first.json
src/DesignToCode/main/: run.py
src/DesignToCode/prompt/: prompt_generator.py
src/DesignToCode/util/: util.py
src/DesignToCode/visual/: image_encoder.py
src/DesignToCode/wrapper/: json_wrapper.py
src/tests/: test_html_safe_to_file.py  test_json_output_from_model.py  test_json_wrapper.py  test_mistral_client.py
